2005-02-08  Derek Price  <derek@ximbiot.com>

	* Makefile.am (config.h, stamp-ch): New targets.
	* config.h.in: New file.
	(PACKAGE_STRING): Generate automatically.
	(FOLD_FN_CHAR): Delete this macro...
	(fncmp, fnfold): ...and these prototypes to pick up default definitions
	from lib/system.h.
	* filesubr.c (VMS_filename_classes): Ditto for this global var.
	(Inspired by report Piet Schuermans <pschuermans@mac.com>.)

	* config.h.in: (inline, SIZE_MAX): Define.
	(Original patch from Piet Schuermans <pschuermans@mac.com>.)

2005-01-31  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Back copyright date off since Makefile.am hasn't changed
	since 2002.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Update copyright notices.

2004-04-04  Derek Price  <derek@ximbiot.com>

	* filesubr.c (isabsolute): Remove this function.
	* config.h (ISABSOLUTE): Define.

2003-11-10  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (xresolvepath): New function.

2003-05-21  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerate with Automake version 1.7.5.

2003-04-10  Larry Jones  <lawrence.jones@eds.com>

	* Makefile.in: Regenerated.

2003-03-24  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Update copyright notice.

	* Makefile.in: Regenerated.

2003-02-25  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated.

2002-12-19  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Remove reference to options.h.
	* startserver.c: Replace reference to options.h with config.h.
	* options.h: Remove file and move relevant content...
	* config.h: ...here.

	* Makefile.in: Regenerated.

2002-12-06  Derek Price  <derek@ximbiot.com>

	* filesubr.c: Change some calls to malloc to use xmalloc.
	* filutils.c: Ditto.
	(Reported by Dan Peterson <dbpete@aol.com>.)

2002-12-06  Derek Price  <derek@ximbiot.com>

	* filesubr.c: Change some calls to strdup to use xstrdup.
	(Reported by Dan Peterson <dbpete@aol.com>.)

2002-09-24  Derek Price  <derek@ximbiot.com>
