@@ -1,3 +1,15 @@
+2005-04-08  Derek Price  <derek@ximbiot.com>
+
+	* .cvsignore: Add stamp-ch.
+
+2005-04-07  Derek Price  <derek@ximbiot.com>
+
+	* stamp-ch: Remove this file.
+
+2005-04-06  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (DISTCLEANFILES): Add stamp-ch for removal on distclean.
+
 2005-02-08  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (config.h, stamp-ch): New targets.
